--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,9 @@ body {
     font-family: 'Anton', sans-serif;
     margin: 0;
 }
+
+/*Header*/
+header{
+    text-align: center;
+    height: 50px;
+}
