--- a/assets/style.css
+++ b/assets/style.css
@@ -16,3 +16,16 @@ header {
     text-align: center;
     height: 50px;
 }
+
+/*footer*/
+footer {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    box-sizing: border-box;
+    min-height: 80px;
+    padding-top: 5px;
+    text-align: center;
+    background-color: grey;
+}
