--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,52 @@ header {
     height: 50px;
 }
 
+/*Game Area*/
+#game-area{
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    text-align: center;
+}
+
+
+#players-choice{
+    float: left;
+    background-color: lightgrey;
+    width: 45%;
+}
+
+#player-image{
+    width: 75%;
+}
+
+#bots-choice{
+    float: right;
+    background-color: lightgrey;
+    width: 45%;
+}
+
+#bot-image{
+    width: 75%;
+}
+ /*Choices area*/
+ #choices{
+    display: inline-block;
+    margin: 10px;
+    width: 100%;
+    height: 40px;
+    font-size: 150%;
+    /*background-color: aqua;*/
+ }
+
+ #choices button{
+    all: unset;
+    display: inline-block;
+    margin: 2%;
+ }
+
+
 /*footer*/
 footer {
     position: absolute;
