--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ footer {
     min-height: 80px;
     padding-top: 5px;
     text-align: center;
-    background-color: grey;
+    background-color: lightgrey;
 }
 
 /*Rules*/
